--- a/football/package.json
+++ b/football/package.json
@@ -5,19 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "react-scripts build && terser build/static/js/*.js --compress --mangle --output build/static/js/",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.8",
-    "antd": "^5.24.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.8"
+    "tailwindcss": "^4.0.8",
+    "terser": "^5.39.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
