--- a/football/package.json
+++ b/football/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.8",
     "terser": "^5.39.0"
